# Gain-Knob

./: Cargo.toml  README.md  build.rs
src/: lib.rs
src/gui/: globals.slint  ui.slint
xtask/src/: main.rs
