[package]
name = "gain_knob"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["xtask"]

[lib]
name = "gain_knob"
crate-type = ["cdylib"]

[build-dependencies]
slint-build = "=1.15.1"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_slint = { path = "../nih-plug-slint" }
slint = { version = "=1.15.1", default-features = false, features = ["std", "renderer-femtovg", "raw-window-handle-06", "compat-1-2"] }
serde = { version = "1.0", features = ["derive"] }
